# rss-reader

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
rss_reader/: __init__.py  core.py
tests/: test_rss_reader.py
